--- a/package.json
+++ b/package.json
@@ -34,6 +34,12 @@
     },
     "commands": [
       {
+        "command": "SseukSseuk.suggest",
+        "category": "Pen Panel",
+        "title": "Intellisence Suggest",
+        "icon": "$(search)"
+      },
+      {
         "command": "SseukSseuk.undo",
         "category": "Pen Panel",
         "title": "Undo",
@@ -60,6 +66,11 @@
     ],
     "menus": {
       "view/title": [
+        {
+          "command": "SseukSseuk.suggest",
+          "group": "navigation",
+          "when": "view == SseukSseuk.panelView"
+        },
         {
           "command": "SseukSseuk.undo",
           "group": "navigation",
@@ -92,16 +103,17 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.79.0",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "20.2.5",
+    "@types/vscode": "^1.79.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "@vscode/test-electron": "^2.3.2",
+    "esbuild": "^0.18.11",
     "eslint": "^8.41.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "typescript": "^5.1.3",
-    "@vscode/test-electron": "^2.3.2"
+    "typescript": "^5.1.3"
   }
 }
