--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "sseuksseukpanel-vscode",
   "displayName": "SseukSseukPanel-VSCode",
   "description": "Let's WRITE code in VSCode as HANDWRITING!",
-  "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/VARZero/sseuksseukpanel-vscode"
+  },
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.79.0"
   },
