--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
           "type":"string",
           "enum": ["mouse", "stylus", "non-hover stylus"],
           "enumDescriptions": ["스타일러스를 따로 스타일러스로 인식하지 않는 경우 사용하세요. (혹은 다른 선택지가 동작되지 않을때 사용하세요)",
-            "시스템이 정상적으로 스타일러스를 인식하는 경우", "M2칩 이전의 iPad와 같이 스타일러스가 호버 기능을 사용하지 않는경우 선택하세요."],
-          "default": "mouse"
+            "시스템이 정상적으로 스타일러스를 인식하는 경우", "M2칩 이전의 iPad와 같이 스타일러스가 호버 기능을 사용하지 않는경우 선택하세요."]
         }
       }
     },
